fix galeri images on safari browser

--- a/assets/css/galeri.css
+++ b/assets/css/galeri.css
@@ -10,6 +10,8 @@ section#galeri div.container div.images {
 section#galeri div.container div.images img {
   flex: var(--galeri-flex);
   width: 33%;
+  height: auto;
+  align-self: flex-start;
   border-radius: 3px;
 }
 
